Perkin-UAT/force-app/main/default/objects/Dealer_Approvers__c/Dealer_Approvers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Dealer Approvers</label>
</CustomObject>