Perkin-UAT/force-app/main/default/objects/Dealer_Approvers__c/fields/AMERICAS_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>AMERICAS_Approver_1__c</fullName>
    <label>AMERICAS Approver 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>