Perkin-UAT/force-app/main/default/objects/Dealer_Approvers__c/fields/APAC_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>APAC_Approver_1__c</fullName>
    <label>APAC Approver 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>