Perkin-UAT/force-app/main/default/objects/Dealer_Approvers__c/fields/EMEA_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Approver_3__c</fullName>
    <label>EMEA Approver 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>